tests/good/tests/bad/testReassignConst.grc
const myConst := "Immutable"
myConst = "Try to change"
